[package]
name = "rtop-rs"
version = "0.2.2"
authors = ["SquitchYT<contact@squitch.fr>"]
edition = "2021"
description = "Faster and better alternative to Vtop written in Rust."
repository = "https://github.com/SquitchYT/RTop"
readme = "README.md"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4.19", features = ["clock"], default-features = false }
ncurses = { version = "5.101.0", features = ["wide"] }
sysinfo = { version = "0.23.5", default-features = false }